[gd_scene load_steps=6 format=3 uid="uid://veqynmrxmgkn"]

[ext_resource type="Script" uid="uid://ubqcao4sho1m" path="res://scenes/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://olh8q1u7jxw8" path="res://scenes/player.tscn" id="1_o5qli"]
[ext_resource type="Texture2D" uid="uid://cabmf57itiuko" path="res://scenes/assets/2D background sky.png" id="2_jyhfs"]
[ext_resource type="AudioStream" uid="uid://bedeuyk6mek7w" path="res://scenes/assets/sounds/mixkit-game-level-music-fixed.wav" id="3_sugp2"]
[ext_resource type="FontFile" uid="uid://mqytwf0ay88e" path="res://scenes/assets/fonts/PressStart2P-Regular.ttf" id="3_tbgi4"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_jyhfs")

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(1, 0.84313726, 0, 1)
theme_override_fonts/font = ExtResource("3_tbgi4")
theme_override_font_sizes/font_size = 28

[node name="Player" parent="." instance=ExtResource("1_o5qli")]
position = Vector2(240, 500)

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_sugp2")
autoplay = true

[node name="GameTimer" type="Timer" parent="."]
autostart = true

[node name="TimerLabel" type="Label" parent="."]
offset_left = 380.0
offset_top = 10.0
offset_right = 445.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_tbgi4")
theme_override_font_sizes/font_size = 28
text = "Time: 30"

[node name="GameOverLabel" type="Label" parent="."]
visible = false
offset_left = 120.0
offset_top = 250.0
offset_right = 500.0
offset_bottom = 288.0
theme_override_colors/font_color = Color(1, 0.33333334, 0.33333334, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_tbgi4")
theme_override_font_sizes/font_size = 38
text = "GAME OVER!"
